# Cpp

./: .gitignore  .gitmodules  README.md
CMakeProject1/: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeProject1.ilk  vcpkg.json
CMakeProject1/Source/: Main.cpp  Main.h
CMakeProject1/cfg/: Config.h.in
CMakeProject1/src/: CMakeLists.txt  main.cpp  main.h
ConsoleApplication/: .gitignore  .gitmodules  CMAKE STUFF.txt  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  ConsoleApplication.code-workspace  ConsoleApplication.cpp  ConsoleApplication.h  ConsoleApplication.jucer  ConsoleApplication.sln  ConsoleApplication.vcxproj  ConsoleApplication.vcxproj.filters  Cpp.code-workspace  Doxyfile  Float.h  cmake_install.cmake  vcpkg.json
ConsoleApplication/Modules/: X.h
ConsoleApplication/cfg/: Config.h  Config.h.in
ConsoleApplication/docs/html/: _abstract_class_8h_source.html  _audio_processor_8h_source.html  _base_class_8h_source.html  _config_8h_source.html  _derived_class_8h_source.html  _inheritance_8h_source.html  _main_8h_source.html  _object_8h_source.html  _plugin_processor_8h_source.html  _plugin_wrapper_8h_source.html  _process_spec_8h_source.html  annotated.html  class_abstract-members.html  class_abstract.html  class_abstract_class-members.html  class_abstract_class.html  class_audio_plugin-members.html  class_audio_plugin.html  class_audio_processor-members.html  class_audio_processor.html  class_base-members.html  class_base.html  class_base_class-members.html  class_base_class.html  class_derived-members.html  class_derived.html  class_derived_class-members.html  class_derived_class.html  class_float-members.html  class_float.html  class_object-members.html  class_object.html  class_plugin_wrapper-members.html  class_plugin_wrapper.html  classes.html  classstoneydsp_1_1_bit-members.html  classstoneydsp_1_1_bit.html  classstoneydsp_1_1_console_app-members.html  classstoneydsp_1_1_console_app.html  classstoneydsp_1_1_double-members.html  (+59 more)
ConsoleApplication/docs/html/d0/d4d/: _process_spec_8h_source.html
ConsoleApplication/docs/html/d0/d55/: _main_8h.html  _main_8h_source.html
ConsoleApplication/docs/html/d0/d6b/: classstoneydsp_1_1_int.html
ConsoleApplication/docs/html/d1/d10/: class_plugin_wrapper.html
ConsoleApplication/docs/html/d1/d52/: class_base_class-members.html
ConsoleApplication/docs/html/d1/d77/: _inheritance_8h_source.html
ConsoleApplication/docs/html/d1/dc5/: classstoneydsp_1_1_bit.html
ConsoleApplication/docs/html/d1/df4/: stoneydsp__float_8h.html  stoneydsp__float_8h_source.html
ConsoleApplication/docs/html/d2/d02/: stoneydsp__logger_8h_source.html
ConsoleApplication/docs/html/d2/d59/: class_abstract-members.html
ConsoleApplication/docs/html/d2/d94/: structstoneydsp_1_1_args.html
ConsoleApplication/docs/html/d2/dc7/: _plugin_wrapper_8h_source.html
ConsoleApplication/docs/html/d2/dd6/: class_derived_class.html
ConsoleApplication/docs/html/d2/def/: _abstract_class_8h_source.html
ConsoleApplication/docs/html/d3/d13/: _base_class_8h_source.html
ConsoleApplication/docs/html/d3/d31/: class_derived-members.html
ConsoleApplication/docs/html/d3/d46/: class_audio_plugin-members.html
ConsoleApplication/docs/html/d3/d4e/: class_audio_processor.html
ConsoleApplication/docs/html/d3/dd1/: classstoneydsp_1_1_value.html
ConsoleApplication/docs/html/d3/deb/: stoneydsp__const_8h_source.html
ConsoleApplication/docs/html/d4/d1a/: class_base-members.html
ConsoleApplication/docs/html/d4/d44/: classstoneydsp_1_1_bit-members.html
ConsoleApplication/docs/html/d4/d71/: _config_8h_source.html
ConsoleApplication/docs/html/d4/d99/: stoneydsp__double_8h.html  stoneydsp__double_8h_source.html
ConsoleApplication/docs/html/d5/d12/: _main_8cpp.html
ConsoleApplication/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+19 more)
ConsoleApplication/docs/latex/: _audio_processor_8h_source.tex  _config_8h_source.tex  _inheritance_8h_source.tex  _main_8h_source.tex  _plugin_wrapper_8h_source.tex  _process_spec_8h_source.tex  annotated.tex  class_abstract.tex  class_abstract_class.eps  class_abstract_class.tex  class_audio_plugin.tex  class_audio_processor.eps  class_audio_processor.tex  class_base.eps  class_base.tex  class_derived.tex  class_derived_class.tex  class_float.tex  class_plugin_wrapper.tex  classstoneydsp_1_1_bit.tex  classstoneydsp_1_1_console_app.tex  classstoneydsp_1_1_double.tex  classstoneydsp_1_1_int.tex  classstoneydsp_1_1_logger.tex  classstoneydsp_1_1_value.tex  classunique__ptr.tex  files.tex  hierarchy.tex  refman.tex  stoneydsp__core_8h_source.tex  stoneydsp__double_8h_source.tex  stoneydsp__float_8h_source.tex  stoneydsp__int_8h_source.tex  stoneydsp__logger_8h_source.tex  stoneydsp__terminal_8h_source.tex  stoneydsp__unique__ptr_8h_source.tex  stoneydsp__value_8h_source.tex  struct_process_spec.tex  structstoneydsp_1_1_args.tex  structstoneydsp_1_1_constants.tex
ConsoleApplication/src/: AbstractClass.h  Atomic.h  AudioPlugin.h  BaseClass.h  Config.h  Config.h.in  ConsoleApplication.cpp  ConsoleApplication.h  Dbl.h  DerivedClass.h  Double.cpp  Double.h  DoubleT.cpp  Float.cpp  Float.h  Flt.h  Inheritance.h  Int.h  IntPtr.h  IntT.cpp  IntT.h  Integer.cpp  Integer.h  Main.cpp  Main.h  Object.cpp  Object.h  Operators.h  PluginProcessor.h  PluginWrapper.h  UniquePointer.h  Value.h  Var.cpp  Var.h  main.cpp  main.h
ConsoleApplication/src/Modules/: Double.cpp  Integer.cpp  Integer.h  Transforms.cpp
ConsoleApplication/src/Modules/stoneydsp_core/: stoneydsp_core.h
ConsoleApplication/src/objects/: AudioProcessor.h  BaseClass.h  ProcessSpec.h
(+105 files in other folders)
